--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
           <h5>Contact Me</h5>
           <ul class="link-color">
             <li><i class="fa-brands fa-telegram"></i>4500 musrhvol plaza, suit 300,<br> fort worth, 29386988</li>
-            <li><i class="fa-solid fa-phone"></i>+1(979)871268</li>
-            <li><i class="fa-regular fa-envelope"></i>info@gmail.com</li>
+            <li><i class="fa-solid fa-phone"></i><a href="tell:+1(979)871268">+1(979)871268</a></li>
+            <li><i class="fa-regular fa-envelope"></i><a href="mailto:info@gmail.com">info@gmail.co</a></li>
           </ul>
         </div>
       </div>
