--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="footer__item">
           <h5>Get in touch</h5>
           <p>Have a question for us?</p>
-          <p>we will answer your problem here</p>
+          <p>We will answer your problem here</p>
           <div class="links link-color">
             <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="https://www.pinterset.com/"><i class="fa-brands fa-pinterest"></i></a>
